@@ -1,6 +1,10 @@
-2008-11-04 Chris Kelly <ckdake@ckdake.com> 1.5.10
+2008-11-11 Chris Kelly <ckdake@ckdake.com> 1.5.10
 
  * Release: 1.5.10
+
+2008-11-11 Jens Tkotz <jens@peino.de> 1.5.10-svn-b10
+
+ * Fix: Delete Imageareas when rotating or resizing an image.
 
 2008-11-01 Jens Tkotz <jens@peino.de> 1.5.10-svn-b9
 
